--- a/src/app.json
+++ b/src/app.json
@@ -23,6 +23,10 @@
     {
       "path":"/editPage",
       "source": "pages/EditPage/index"
+    },
+    {
+      "path":"/showStatus",
+      "source": "pages/ShowStatus/index"
     }
   ],
   "window": {
